Added new bio deatils

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Welcome to my AI Startup Website - Sukki-new-branch</h1>
+<h1>Welcome to my AI Startup Website, second changes to modified - Sukki-new-branch</h1>
