Added products now

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Welcome to my AI Startup Website, update-product-details</h1>
+<h1>Welcome to my AI Startup Website,second edits update-product-details</h1>
 
